--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1>World Clock</h1>
   <footer>
     This project was coded by Shanique Sully and is
-    <a href="#" target="_blank">
+    <a href="https://github.com/SSully284/World-Clock.git" target="_blank">
       open sourced on GitHub.
     </a>
   </footer>
