--- a/index.html
+++ b/index.html
@@ -10,7 +10,31 @@
 </head>
 
 <body>
-  <h1>World Clock</h1>
+  <div class="container">
+    <h1>World Clock</h1>
+
+    <select name="" id="">
+      <option value="">Select a city</option>
+      <option value="">Montreal</option>
+      <option value="">Seattle</option>
+      <option value="">London</option>
+      <option value="">Kenya</option>
+      <option value="">New Zealand</option>
+    </select>
+
+    <div class="city">
+      <h2>🇺🇸 Georgia</h2>
+      <div class="date">May 10th 2023</div>
+      <div class="time">1:58:35 PM</div>
+    </div>
+
+    <div class="city">
+      <h2>🏴󠁧󠁢󠁳󠁣󠁴󠁿 Scotland</h2>
+      <div class="date">May 10th 2023</div>
+      <div class="time">1:58:35 PM</div>
+    </div>
+
+  </div>
   <footer>
     This project was coded by Shanique Sully and is
     <a href="https://github.com/SSully284/World-Clock.git" target="_blank">
