--- a/index.html
+++ b/index.html
@@ -23,20 +23,24 @@
     </select>
 
     <div class="city">
-      <h2>🇺🇸 Georgia</h2>
-      <div class="date">May 10th 2023</div>
-      <div class="time">1:58:35 PM</div>
+      <div>
+        <h2>🇺🇸 Georgia</h2>
+        <div class="date">May 10th 2023</div>
+      </div>
+      <div class="time">1:58:35 <small>PM</small></div>
     </div>
 
     <div class="city">
-      <h2>🏴󠁧󠁢󠁳󠁣󠁴󠁿 Scotland</h2>
-      <div class="date">May 10th 2023</div>
-      <div class="time">1:58:35 PM</div>
+      <div>
+        <h2>🏴󠁧󠁢󠁳󠁣󠁴󠁿 Scotland</h2>
+        <div class="date">May 10th 2023</div>
+      </div>
+      <div class="time">1:58:35 <small>PM</small></div>
     </div>
 
   </div>
   <footer>
-    This project was coded by Shanique Sully and is
+    This project was coded with 🧡 by <strong>Shanique Sully</strong> and is
     <a href="https://github.com/SSully284/World-Clock.git" target="_blank">
       open sourced on GitHub.
     </a>
