Display cities changed and JS updated to show current date and time

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js"></script>
   <title>World Clock - Shanique Sully</title>
 </head>
+🇩🇪
 
 <body>
   <div class="container">
@@ -22,20 +26,20 @@
       <option value="">New Zealand</option>
     </select>
 
-    <div class="city">
+    <div class="city" id="chicago">
       <div>
-        <h2>🇺🇸 Georgia</h2>
-        <div class="date">May 10th 2023</div>
+        <h2>🇺🇸 Chicago</h2>
+        <div class="date"> </div>
       </div>
-      <div class="time">1:58:35 <small>PM</small></div>
+      <div class="time"> </div>
     </div>
 
-    <div class="city">
+    <div class="city" id="yukon">
       <div>
-        <h2>🏴󠁧󠁢󠁳󠁣󠁴󠁿 Scotland</h2>
-        <div class="date">May 10th 2023</div>
+        <h2>🇨🇦 Yukon</h2>
+        <div class="date"> </div>
       </div>
-      <div class="time">1:58:35 <small>PM</small></div>
+      <div class="time"> </div>
     </div>
 
   </div>
