--- a/index.html
+++ b/index.html
@@ -17,29 +17,31 @@
   <div class="container">
     <h1>World Clock</h1>
 
-    <select name="" id="">
+    <select name="" id="city">
       <option value="">Select a city</option>
-      <option value="">Montreal</option>
-      <option value="">Seattle</option>
-      <option value="">London</option>
-      <option value="">Kenya</option>
-      <option value="">New Zealand</option>
+      <option value="America/Montreal">Montreal</option>
+      <option value="America/Vancouver">Vancouver</option>
+      <option value="Europe/London">London</option>
+      <option value="Asia/Hong_Kong"> Hong Kong</option>
+      <option value="Australia/Melbourne">Melbourne</option>
     </select>
 
-    <div class="city" id="chicago">
-      <div>
-        <h2>🇺🇸 Chicago</h2>
-        <div class="date"> </div>
+    <div class="cities" id="cities">
+      <div class="city" id="chicago">
+        <div>
+          <h2>🇺🇸 Chicago</h2>
+          <div class="date"> </div>
+        </div>
+        <div class="time"> </div>
       </div>
-      <div class="time"> </div>
-    </div>
 
-    <div class="city" id="yukon">
-      <div>
-        <h2>🇨🇦 Yukon</h2>
-        <div class="date"> </div>
+      <div class="city" id="yukon">
+        <div>
+          <h2>🇨🇦 Yukon</h2>
+          <div class="date"> </div>
+        </div>
+        <div class="time"> </div>
       </div>
-      <div class="time"> </div>
     </div>
 
   </div>
