--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <select name="" id="city">
       <option value="">Select a city</option>
+      <option value="current">My Current Location</option>
       <option value="America/Montreal">Montreal</option>
       <option value="America/Vancouver">Vancouver</option>
       <option value="Europe/London">London</option>
