--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <option value="America/Montreal">Montreal</option>
       <option value="America/Vancouver">Vancouver</option>
       <option value="Europe/London">London</option>
-      <option value="Asia/Hong_Kong"> Hong Kong</option>
+      <option value="Asia/Manila"> Manila</option>
       <option value="Australia/Melbourne">Melbourne</option>
     </select>
 
@@ -35,6 +35,14 @@
       <div class="city" id="chicago">
         <div>
           <h2>🇺🇸 Chicago</h2>
+          <div class="date"> </div>
+        </div>
+        <div class="time"> </div>
+      </div>
+
+      <div class="city" id="barbados">
+        <div>
+          <h2>🇧🇧 Barbados</h2>
           <div class="date"> </div>
         </div>
         <div class="time"> </div>
@@ -48,6 +56,8 @@
         <div class="time"> </div>
       </div>
     </div>
+
+  </div>
 
   </div>
   <footer>
